<resources>
    <string name="app_name">Food Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Connection_Fail">Connection Fail</string>
    <string name="id_token">890247392346-150r3jt7r3j5tav8jl7h8t06j5mqhuhr.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Next">Next</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="plandeleted">Plan Deleted</string>
    <string name="donot_have_account">do not have account</string>
    <string name="create_account">create account</string>
    <string name="pleasechooseday">Please Choose Day</string>
    <string name="pleasechoosetype">Please Choose Type</string>
    <string name="plans">Plans</string>
    <string name="dataArrivec">Data Updated</string>
    <string name="search">Search</string>
    <string name="Authfild">Authentication Failed</string>
    <string name="api_key">AIzaSyB6yA4ob64p9aGrtrxtCcg5pd1TSlSTFEU</string>
    <string name="Continue_as_Guest">Continue as Guest</string>
    <string name="Guest">Guest</string>
    <string name="createaccpuntwithgoogle">create accunt with google</string>
    <string name="loginwithgoogleaccount">login with google account</string>
    <string name="password_is_empty">password is empty</string>
    <string name="email_is_empty">email is empty</string>
    <string name="email_is_invalid">email is invalid</string>"
    <string name="password_is_invalid">password is invalid</string>
    <string name="password_does_not_match">password does not match</string>
    <string name="Search">Search</string>
    <string name="error">Error</string>
    <string name="about">about</string>
    <string name="mealsaved">Meal Saved</string>
    <string name="mealallreadysaved">Meal is Already Saved</string>
    <string name="Pleaselogin">Please login</string>
    <string name="sucess">Success</string>
    <string name="plansaved">Plan Saved</string>
    <string name="faild">Failed</string>
    <string name="errorauthfild">user name or password is incorrect.</string>
    <string name="connected">connected</string>
    <string name="youarenotlogin">You are not Login</string>
    <string name="notconnected">not connected</string>
    <string name="CreateAccount">Create Account</string>
    <string name="createaccountsucces">Create Account Successful</string>
    <string name="welcom">"Welcome"</string>
    <string name="All_Meals">Meals</string>
    <string name="Meals_of_Week">Meals of Week</string>
    <string name="Favourite_Meals">Favourites</string>
    <string name="Meal_of_Day">Meal of Day</string>
    <string name="Categories">Categories</string>
    <string name="Country">Country</string>
    <string name="ingratiates">Ingratiates</string>
    <string name="Instructions">Instructions</string>
    <string name="information">information</string>
    <string name="type">"Type"</string>
    <string name="Steps">Steps</string>
    <string name="Countries">Countries</string>
    <string name="asyncButton">async Data</string>
    <string name="ReadFromCloud">Read From Cloud</string>
    <string name="breakfast">BreakFast</string>
    <string name="Non">None</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Date">Date : </string>
    <string name="GetDate">Get Date</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="Logout">Logout</string>
    <string name="day">"Day : "</string>
    <string name="Monday">Monday</string>
    <string name="Saturday">Saturday</string>
    <string name="Friday">Friday</string>
    <string name="Thursday">Thursday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Sunday">Sunday</string>
    <string name="_type">Type :</string>
    <string name="saveOnCloud">Save On Cloud</string>
    <string name="areas">Areas</string>
    <string name="Email">"Email : "</string>
</resources>