<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <Spinner
            android:id="@+id/Areasspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.66"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintVertical_bias="0.001" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:gravity="center|start"
            android:text="@string/areas"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/Areasspinner"
            app:layout_constraintEnd_toStartOf="@+id/Areasspinner"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Areasspinner"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start"
            android:text="@string/Categories"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/Catspinner"
            app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/Catspinner" />

        <Spinner
            android:id="@+id/Catspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/Areasspinner"
            app:layout_constraintStart_toStartOf="@+id/Areasspinner"
            app:layout_constraintTop_toBottomOf="@+id/Areasspinner" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|start"
            android:text="@string/ingratiates"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/Ingspinner"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/Ingspinner" />

        <Spinner
            android:id="@+id/Ingspinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/Catspinner"
            app:layout_constraintStart_toStartOf="@+id/Catspinner"
            app:layout_constraintTop_toBottomOf="@+id/Catspinner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SearchRec"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ingspinner"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>